# capstone_project

./: .gitignore  CMakeLists.txt  Readme.md  conerter.py
include/: cuda_kernels.h  neural_net.h  utils.h
src/: cuda_kernels.cu  main.cu  neural_net.cu  utils.cpp
